--- a/itsyrealm/templates/home/base.html
+++ b/itsyrealm/templates/home/base.html
@@ -21,6 +21,9 @@
 				<p>
 					Copyright &copy; <a href="mailto:squeak@erinmaus.com">Erin Maus</a>
 				</p>
+				<p>
+					Looking for a <a href="/presskit">press kit</a>?
+				</p>
 			</footer>
 		</main>
 	</body>
