--- a/itsyrealm/templates/home/presskit.html
+++ b/itsyrealm/templates/home/presskit.html
@@ -51,9 +51,9 @@
 			<p>Should you fail, the four Old Ones will succeed to tear the very fabric of reality apart...</p>
 			<h2 id="history">History</h2>
 			<p>In late March of 2018, Erin began development of an open-source tycoon-styled game inspired by a mash-up of RuneScape and RollerCoaster Tycoon. Soon, the game morphed into its own thing. In October of 2021, ItsyRealm found its way on Steam and is in Early Access.</p>
-			<h2>Videos</h2>
+			<h2 id="videos">Videos</h2>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9LagoVXWNS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<h2>Screenies</h2>
+			<h2 id="screenies">Screenies</h2>
 			<a href="{{ url_for('static', filename='images/screenshot1.jpg') }}"><img src="{{ url_for('static', filename='images/screenshot1.jpg') }}" alt="screenshot"></a>
 			<a href="{{ url_for('static', filename='images/screenshot2.jpg') }}"><img src="{{ url_for('static', filename='images/screenshot2.jpg') }}" alt="screenshot"></a>
 			<a href="{{ url_for('static', filename='images/screenshot3.jpg') }}"><img src="{{ url_for('static', filename='images/screenshot3.jpg') }}" alt="screenshot"></a>
@@ -62,14 +62,14 @@
 			<a href="{{ url_for('static', filename='images/screenshot6.jpg') }}"><img src="{{ url_for('static', filename='images/screenshot6.jpg') }}" alt="screenshot"></a>
 			<h2 id="logos">Logos</h2>
 			<a href="{{ url_for('static', filename='images/logo.png') }}"><img src="{{ url_for('static', filename='images/logo.png') }}" alt="screenshot"></a>
-		<h2 id="links">Links</h2>
-		<ol>
-			<li>Github: <a href="https://github.com/erinmaus/itsyscape">https://github.com/erinmaus/itsyscape</a></li>
-			<li>Twitter: <a href="https://twitter.com/itsyrealm">https://twitter.com/itsyrealm</a> / <a href="https://twitter.com/bkdoormaus">https://twitter.com/bkdoormaus</a></li>
-			<li>Facebook: <a href="https://facebook.com/ItsyRealm">https://facebook.com/ItsyRealm</a></li>
-			<li>Instagram: <a href="https://www.instagram.com/itsyrealm/">https://www.instagram.com/itsyrealm/</a></li>
-			<li>Discord: <a href="https://github.com/erinmaus/itsyscape">https://github.com/erinmaus/itsyscape</a></li>
-		</ol>
+			<h2 id="links">Links</h2>
+			<ol>
+				<li>Github: <a href="https://github.com/erinmaus/itsyscape">https://github.com/erinmaus/itsyscape</a></li>
+				<li>Twitter: <a href="https://twitter.com/itsyrealm">https://twitter.com/itsyrealm</a> / <a href="https://twitter.com/bkdoormaus">https://twitter.com/bkdoormaus</a></li>
+				<li>Facebook: <a href="https://facebook.com/ItsyRealm">https://facebook.com/ItsyRealm</a></li>
+				<li>Instagram: <a href="https://www.instagram.com/itsyrealm/">https://www.instagram.com/itsyrealm/</a></li>
+				<li>Discord: <a href="https://github.com/erinmaus/itsyscape">https://github.com/erinmaus/itsyscape</a></li>
+			</ol>
 		</div>
 	</div>
 {% endblock %}
