--- a/itsyrealm/templates/home/presskit.html
+++ b/itsyrealm/templates/home/presskit.html
@@ -40,7 +40,7 @@
 		</ol>
 		<div class="presskit-content">
 			<h2 id="elevator">Elevator Pitch</h2>
-			<p>ItsyRealm plays like a single-player MMORPG with a cutesy, old-school aesthetic. Grindy, unrewarding gameplay loops are replaced with quick progression without compromising the old school feel. The world is filled with a diverse cast -- including a ton of minority characters and customization options.</p>
+			<p>ItsyRealm plays like a single-player MMORPG with a cutesy, old-school aesthetic. Grindy, unrewarding gameplay loops are replaced with quick progression without compromising the old school feel. The world is filled with a diverse cast of characters, from all sorts of backgrounds, and with all kinds of identities.</p>
 			<h2 id="description">Description</h2>
 			<p>In ItsyRealm, you're on an awesome quest to discover the secrets of a necromancer god only known as the Empty King.</p>
 			<ol>
@@ -50,7 +50,7 @@
 			</ol>
 			<p>Should you fail, the four Old Ones will succeed to tear the very fabric of reality apart...</p>
 			<h2 id="history">History</h2>
-			<p>In late March of 2018, Erin began development of an open-source tycoon-styled game inspired by a mash-up of RuneScape and RollerCoaster Tycoon. Soon, the game morphed into its own thing. In October of 2021, ItsyRealm found its way on Steam and is in Early Access.</p>
+			<p>In late March of 2018, Erin began development of an open-source tycoon-styled game inspired by a mash-up of RuneScape and RollerCoaster Tycoon. But the Tycoon spin didn't last long -- within a few months, ItsyRealm became a unique game. In October of 2021, ItsyRealm found its way on Steam and is in Early Access.</p>
 			<h2 id="videos">Videos</h2>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9LagoVXWNS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<h2 id="screenies">Screenies</h2>
