--- a/itsyrealm/static/style/style.css
+++ b/itsyrealm/static/style/style.css
@@ -10,12 +10,13 @@ body {
 	color: #eeeeee;
 	text-shadow: 1px 1px #000000;
 
-	background: url("/static/images/background1.png") repeat;
+	background: url("/static/images/background-bottom.png") bottom left -24rem no-repeat,
+		url("/static/images/background1-dark.png") repeat;
 }
 
 a, a:active, a:visited, a:hover {
 	font-size: 48px;
-	color: #ac5fd3;
+	color: #d6afe9;
 
 	text-decoration: none;
 }
@@ -31,8 +32,6 @@ header {
 
 	width:  100%;
 	height: 16rem;
-
-	background: url("/static/images/background1-dark.png") repeat;
 }
 
 #itsyrealm-logo {
