Enable downloading again.

--- a/itsyrealm/templates/home/index.html
+++ b/itsyrealm/templates/home/index.html
@@ -12,8 +12,9 @@
 				<li><a href="https://www.instagram.com/itsyrealm/" class="fab fa-instagram"></a></li>
 				<li><a href="https://discord.gg/xUSkF9n" class="fab fa-discord"></a></li>
 				<li><a href="https://github.com/erinmaus/itsyscape" class="fab fa-github"></a></li>
+				<li><a href="https://store.steampowered.com/app/1662510" class="fab fa-steam"></a></li>
 			</ul>
-			<a href="https://store.steampowered.com/app/1662510" class="button">Play Now!</a>
+			<a href="{{ url_for('home.play') }}" class="button">Play Now!</a>
 		</div>
 	</div>
 	<div class="feature">
