--- a/itsyrealm/templates/home/index.html
+++ b/itsyrealm/templates/home/index.html
@@ -10,7 +10,7 @@
 				<li><a href="https://facebook.com/ItsyRealm" class="fab fa-facebook"></a></li>
 				<li><a href="https://twitter.com/ItsyRealm" class="fab fa-twitter"></a></li>
 				<li><a href="https://www.instagram.com/itsyrealm/" class="fab fa-instagram"></a></li>
-				<li><a href="https://discord.gg/xUSkF9n" class="fab fa-discord"></a></li>
+				<li><a href="https://discord.gg/979BhXY" class="fab fa-discord"></a></li>
 				<li><a href="https://github.com/erinmaus/itsyscape" class="fab fa-github"></a></li>
 				<li><a href="https://store.steampowered.com/app/1662510" class="fab fa-steam"></a></li>
 			</ul>
